@startuml
!include skin.iuml

class Scene {
    - sceneComponents : vector<SceneComponent>
    - cam : Camera
    + AddSceneComponent(sceneComponent : SceneComponent) : void
    + Update(cam : Camera) : void
    + CollectRenderables() : vector<Renderable>
    + CollectOverlays() : vector<TextOverlay>
}

class SceneComponent {
    + Update(cam : Camera) : void
    + CollectRenderables() : vector<Renderable> 
    + CollectOverlays() : vector<TextOverlay>        
}

class TextOverlay {
    - screenX : int [0, 1]
    - screenY : int [0, 1]
    - text : string    
    + void Update(string newText)
}

Renderer -> Scene : render(scene)

Scene "1" o- "n" Camera
Scene "1" o-- "n"  SceneComponent

SceneComponent "1" o-- "n" Renderable
SceneComponent o- TextOverlay

Renderable o-- Mesh
Renderable "1" o-l- "1" Transform
Renderable o- Material
@enduml
